[gd_scene load_steps=3 format=3 uid="uid://budxt0ohhps46"]

[ext_resource type="Script" uid="uid://dxd3thybq7mc2" path="res://panel/channel_control.gd" id="1_t40fg"]
[ext_resource type="Texture2D" uid="uid://b4jdl1ipes5d0" path="res://panel/icons/send_icon.tres" id="2_yr06o"]

[node name="ChannelControl" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"H1PanelContainer"
script = ExtResource("1_t40fg")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HeaderContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="IdLabel" type="Label" parent="VBoxContainer/HeaderContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"HeaderMedium"
text = "00000000000000000000"

[node name="LabelLabel" type="Label" parent="VBoxContainer/HeaderContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"HeaderMedium"
text = "00000000000000000000"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="SendButton" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
tooltip_text = "Send"
icon = ExtResource("2_yr06o")
icon_alignment = 1
expand_icon = true

[connection signal="text_submitted" from="VBoxContainer/HBoxContainer/LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/SendButton" to="." method="_on_button_pressed"]
